delete account endpoint accept password
